--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "amadeus": "^9.1.0",
     "express": "^4.18.2",
