--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "amadeus": "^9.1.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "openai": "^4.27.0"
   }
